--- a/joy-2-plus/index.html
+++ b/joy-2-plus/index.html
@@ -172,16 +172,10 @@
 
 <section id="kv" class="xd-section sec1">
     <div class="info kv-info mg-center">
-        <div class="h1">Your spark. <br />Your joy.</div>
-        <div class="xd-txt">
-            Designed for the generation that never sleeps, the AI powered camera technology and all-day battery life
-            bring you endless joy whenever and wherever you are.
-        </div>
+        <div class="h1">СМАРТФОН ДЛЯ ПОКОЛЕНИЯ, <br />КОТОРОЕ НИКОГДА НЕ СПИТ</div>
+        <div class="xd-txt">Камера с функцией искусственного интеллекта и сверхъемкий аккумулятор позволят вам общаться, создавать  контент, и делиться им  сколько угодно и где угодно без ограничений.</div>
         <div class="video-btn mg-center">
-            <a data-video="https://www.youtube.com/embed/UfmHY81YJuA?rel=0;&autoplay=1" class="vd-btn">
-                Watch the
-                video
-            </a>
+            <a data-video="https://www.youtube.com/embed/UfmHY81YJuA?rel=0;&autoplay=1" class="vd-btn">Смотреть видео</a>
         </div>
     </div>
     <div class="s1-phone mg-center">
@@ -205,11 +199,8 @@
 
 <section id="thong-tin" class="xd-section sec2">
     <div class="info s2-info mg-center">
-        <div class="h2">Big screen. <br />Big expectations.</div>
-        <div class="xd-txt">
-            Designed for the generation that never sleeps, the AI powered camera technology and all-day battery life
-            bring you endless joy whenever and wherever you are.
-        </div>
+        <div class="h2">БОЛЬШЕ ЭКРАН – <br />ЯРЧЕ ВПЕЧАТЛЕНИЯ</div>
+        <div class="xd-txt">Сверхширокий 6,2-дюймовый HD+ экран с соотношением сторон 19: 9 - идеальный формат для непрерывного просмотра мультимедийного контента.</div>
     </div>
     <div class="s2-phone mg-center">
         <img src="../images/joy-2-plus/s2-phone.jpg" class="s2-phone-pic">
@@ -218,11 +209,8 @@
 
 <section id="rear-camera" class="xd-section sec3">
     <div class="info s3-info mg-center">
-        <div class="h2">Capture the best of you<br /> and your surroundings.</div>
-        <div class="xd-txt">
-            The 13 MP dual camera 5 MP allows you to capture the best of you and your surroundings, so you can share
-            it with everyone in real time.
-        </div>
+        <div class="h2">ЛОВИ МОМЕНТ</div>
+        <div class="xd-txt">Двойная камера (13Мп+5Мп) позволяет делать снимки самых ярких моментов , происходящих вокруг вас , которыми можно делиться с кем угодно и когда угодно</div>
         <div class="s3-icons mg-center">
             <img src="../images/joy-2-plus/s3-icons.png">
         </div>
@@ -239,12 +227,8 @@
 
 <section id="camera-bokeh" class="xd-section sec4">
     <div class="info s4-info mg-center">
-        <div class="h2">Impeccable portraits.</div>
-        <div class="xd-txt">
-            Take portraits good enough to frame. The dual camera interprets the depth of field, blurs the background
-            and keeps people sharply in focus. The result: a bokeh effect on point, as the level of professional
-            cameras and your natural beauty highlighted by the Face Beauty feature.
-        </div>
+        <div class="h2">БЕЗУПРЕЧНАЯ ПОРТРЕТНАЯ ФОТОСЬЕМКА</div>
+        <div class="xd-txt">Двойная камера распознает глубину резкости, размывает фон и четко фокусируется на объекте съемки благодаря эффекту боке. Функция Face Beauty подчеркивает естественную красоту лица и устраняет незначительные недостатки.</div>
     </div>
     <div class="s4-phone-box mg-center">
         <div class="s4-phone mg-center">
@@ -257,20 +241,16 @@
             <div class="slide-btn"></div>
         </div>
         <div class="s4-control-text mg-center">
-            <div id="s4-p1" class="">ORIGINAL PHOTO</div>
-            <div id="s4-p2" class="active">AI BOKEH</div>
+            <div id="s4-p1" class="">ОРИГИНАЛЬНОЕ ФОТО</div>
+            <div id="s4-p2" class="active">ИНТЕЛЛЕКТУАЛЬНОЕ БОКЕ</div>
         </div>
     </div>
 </section>
 
 <section id="low-light" class="xd-section sec5">
     <div class="info s5-info mg-center">
-        <div class="h2">A camera for the nocturnal.</div>
-        <div class="xd-txt">
-            Landscapes under low light or high contrast will no longer pose a challenge for your photos. The
-            Lowlight HDR mode prevents shadows by capturing several images with different exposures and merging them
-            to achieve the best possible snapshot.
-        </div>
+        <div class="h2">КАМЕРА ДЛЯ НОЧНОЙ СЪЕМКИ</div>
+        <div class="xd-txt">Отличные снимки при слабом освещении или высокой контрастности больше не проблема. Режим Low-light, основанный на технологии HDR, предотвращает излишнее затемнение, захватывая несколько изображений с разной экспозицией и объединяя их для получения оптимального результата.</div>
     </div>
     <div class="s5-phone mg-center">
         <img src="../images/joy-2-plus/s5-bg.jpg" class="s5-phone-overlay xd-pc">
@@ -286,20 +266,16 @@
             </div>
         </div>
         <div class="s5-control mg-center">
-            <span>Normal mode</span>
-            <span>Lowlight HDR mode</span>
+            <span>ОБЫЧНЫЙ РЕЖИМ</span>
+            <span>РЕЖИМ НОЧНОЙ HDR</span>
         </div>
     </div>
 </section>
 
 <section id="ai-camera" class="xd-section sec6">
     <div class="info s6-info">
-        <div class="h2">Selfie galore.</div>
-        <div class="xd-txt">
-            The Joy 2+ front camera puts artificial intelligence at your service to achieve portrait mode. The
-            integrated Face Beauty feature will detect your face, soften the features and correct minor
-            imperfections.
-        </div>
+        <div class="h2">ИДЕАЛЬНОЕ СЕЛФИ</div>
+        <div class="xd-txt">Фронтальная камера Joy 2+, благодаря искусственному интеллекту, делает безукоризненные портретные снимки с помощью одной камеры. Интегрированная функция Face Beauty распознает ваше лицо, смягчает черты и устраняет незначительные недостатки.</div>
         <div class="s6-icons">
             <img src="../images/joy-2-plus/s6-icons.png">
         </div>
@@ -316,10 +292,8 @@
 
 <section id="more-fun" class="xd-section sec7">
     <div class="info s7-info mg-center">
-        <div class="h2">More fun,<br />more originality.</div>
-        <div class="xd-txt">
-            Have more fun, express yourself and tell the world how you feel with AR stickers.
-        </div>
+        <div class="h2">ВРЕМЯ ДЛЯ РАЗВЛЕЧЕНИЙ</div>
+        <div class="xd-txt">Выражайте себя и свои эмоции с помощью забавных стикеров AR.</div>
     </div>
     <div class="s7-phone mg-center">
         <img src="../images/joy-2-plus/s7-phone.jpg" class="s7-phone-pic">
@@ -336,10 +310,8 @@
         </div>
     </div>
     <div class="info s8-info mg-center">
-        <div class="h2">No interuption, <br />from dusk till dawn.</div>
-        <div class="xd-txt">
-            The smartphone for the generation that never sleeps. The 4500mAh battery will accompany you from day to night, with more than 22 hours of games, 138 hours of multimedia and up to 28 hours of calls. What’s more, with Qualcomm Quick Charge 3.0 technology, it goes from 0% to 50% power in just over 30 minutes.
-        </div>
+        <div class="h2">БЕЗ ПЕРЕРЫВА <br />ОТ ЗАКАТА ДО РАССВЕТА</div>
+        <div class="xd-txt">Смартфон для поколения, которое никогда не спит. Аккумулятор емкостью 4500 мАч будет сопровождать вас день и ночь. Более, чем X часами игр, X часами мультимедиа и до X часов звонков. Более того, с технологией Qualcomm Quick Charge 3.0 аккумулятор заряжается от 0% до 50% всего за 30 минут.</div>
     </div>
 </section>
 
@@ -350,12 +322,9 @@
         <img src="../images/joy-2-plus/s9-phone-3.png" class="s9-p3 abs">
     </div>
     <div class="info s9-info mg-center">
-        <div class="h2">New sparkling colors.</div>
+        <div class="h2">ИСКРЯЩИЕСЯ ЦВЕТА</div>
         <div class="xd-txt">
-            Joy 2+ comes in 3 gradient colors inspired by you and for you: <span class="nowrap">
-                Viridian
-                Blue,
-            </span> Sunset Pink & Borealis.
+            Joy 2+ поставляется в 3-х цветах, вдохновленных вами: Розовый закат, Синий малахит и Бореалис.
         </div>
     </div>
     <div class="xd-mb"><img src="../images/joy-2-plus/s9-light.jpg"></div>
@@ -363,11 +332,8 @@
 
 <section id="cpu" class="xd-section sec10">
     <div class="info s10-info mg-center">
-        <div class="h2">Snapdragon 450 <br />with 8-core processor.</div>
-        <div class="xd-txt">
-            25% faster CPU performance<br />25% faster GPU performance<br />30% lower power consumption.
-
-        </div>
+        <div class="h2">ВОСЬМИЯДЕРНЫЙ ПРОЦЕССОР <br />SNAPDRAGON 450</div>
+        <div class="xd-txt">на 25% выше производительность процессора, <br />на 25% выше производительность GPU, <br />на 30% меньше энергопотребление</div>
     </div>
     <div class="s10-phone mg-center">
         <img src="../images/joy-2-plus/s10-bg.jpg" class="s10-bg-pic">
@@ -418,93 +384,95 @@
         <div class="ts-info-box">
             <div class="ts-info">
                 <div class="ts-info-col">
-                    <div class="h2 ticon-1">DESIGN</div>
+                    <div class="h2 ticon-1">ГАБАРИТЫ УСТРОЙСТВА</div>
                     <div class="xd-txt">
-                        Dimensions: 157 x 76 x 8.7 mm<br />
-                        Weight: 176 g
-
+                        Размеры: 157 x 76 x 8.7 мм<br />
+                        Вес: 176 г
                     </div>
                 </div>
                 <div class="ts-info-col">
-                    <div class="h2 ticon-3">PERFORMANCE</div>
+                    <div class="h2 ticon-3">ПРОЦЕССОР И ПАМЯТЬ</div>
                     <div class="xd-txt">
-                        Operating system: Android™ 9.0 Pie™<br />
-                        RAM 2 | 3 GB<br />
-                        ROM 32 GB<br />
-                        CPU Qualcomm® Snapdragon™ 450 Octa-core up to 1.8 GHz, 14nm<br />
-                        GPU Qualcomm® Adreno™ 506 up to 650 MHz
-                    </div>
-                </div>
-                <div class="break-col"></div>
-                <div class="ts-info-col">
-                    <div class="h2 ticon-11">CAMERA</div>
-                    <div class="xd-txt">
-                        Front camera<br />
-                        8 MP, ƒ/2.2<br />
-                        Bokeh mode (single camera)<br />
-                        Video resolution 1080p@30fps<br />
-                        Face Beauty<br />
-                        AR stickers<br />
-                        <br />
-                        Rear camera <br />
-                        Dual Camera 13 MP ƒ/2.0 + 5 MP ƒ/2.4<br />
-                        Led Flash<br />
-                        Auto Focus<br />
-                        Video resolution 1080p@60fps<br />
-                        Bokeh mode (dual camera)<br />
-                        Face Beauty<br />
-                        Auto HDR<br />
-                        Low Light Shot / Low Light HDR<br />
-                        Parameters' manual setting<br />
-                        (shutter speed, focus, ISO)<br />
-                        AR stickers
+                        Оперативная память: 2ГБ | 3ГБ<br />
+                        Внутренняя память: 32ГБ<br />
+                        Процессор: <br />
+                        Qualcomm® Snapdragon™ 450<br />
+                        (8-ядер , 1.8 ГГц , 14-нм)<br />
+                        Графический процессор:<br />
+                        Qualcomm® Adreno™ 506 (650 МГц )
                     </div>
                 </div>
                 <div class="break-col"></div>
                 <div class="ts-info-col">
-                    <div class="h2 ticon-2">DISPLAY</div>
+                    <div class="h2 ticon-11">Камера</div>
                     <div class="xd-txt">
-                        Dimensions: 6.2"<br />
-                        Resolution: HD+ 720 x 1520 - 271 ppi<br />
-                        Aspect ratio 19:9<br />
-                        Brightness Technology<br />
-                        LCD IPS water drop display 2.5D<br />
-                        Multi-touch (10 capacitive points)
+                        Основная камера:<br />
+                        13МП (апертура ƒ/2.0)<br />
+                        5МП (апертура ƒ/2.4)<br />
+                        Светодиодная вспышка<br />
+                        Автофокус<br />
+                        Разрешение видео - 1080p при 60 кадрах в сек.<br />
+                        Авто HDR / HDR при слабом освещении<br />
+                        Съемка при слабом освещении<br />
+                        Режим «Боке»<br />
+                        Стикеры дополненной реальности (AR)<br />
+                        Режим «Бьютификации»<br />
+                        Ручная установка параметров (выдержка, фокус, 
+                        ISO)<br />
+                        Фронтальная камера: 8МП (апертура ƒ/2.2)<br />
+                        Индикатор селфи<br />
+                        Разрешение видео - 1080p при 30 кадрах в сек.<br />
+                        Режим «Боке»<br />
+                        Стикеры дополненной реальности (AR)<br />
+                        Режим «Бьютификации»
+                    </div>
+                </div>
+                <div class="break-col"></div>
+                <div class="ts-info-col">
+                    <div class="h2 ticon-2">Дисплей</div>
+                    <div class="xd-txt">
+                        Диагональ: 6.2“<br />
+                        Разрешение: HD+ (720 x 1520)<br />
+                        Плотность пикселей: 271 ppi<br />
+                        Соотношение сторон: 19:9<br />
+                        Тип матрицы: IPS 2.5D<br />
+                        Мультитач (10 точек касания)
                     </div>
                 </div>
                 <div class="ts-info-col">
-                    <div class="h2 ticon-9">CONNECTIVITY</div>
+                    <div class="h2 ticon-9">Интерфейсы</div>
                     <div class="xd-txt">
                         USB Type-C OTG<br />
-                        Dual nano-SIM<br />
-                        3.5 mm TRRS headphone jack (CTIA)<br />
-                        MicroSD™ slot, up to 128 GB<br />
-                        TDD: Band 38/40/41<br />
-                        FDD: Band 1/2/3/5/7/8/20<br />
-                        WCDMA: Band 1/2/5/8<br />
-                        GSM: Band 2/3/5/8<br />
-                        Wi-Fi 802.11 b/g/n 2,4 GHz<br />
+                        Двойной слот nanoSIM<br />
+                        Слот MicroSD ™ (до 128ГБ)<br />
+                        Разъем для наушников - TRRS 3.5 мм (CTIA)<br />
+                        Wi-Fi 802.11 b/g/n (2.4 ГГц)<br />
                         VoLTE<br />
                         Bluetooth® 4.2<br />
-                        GPS / Glonass
+                        TDD-LTE - диапазоны 38/40/41<br />
+                        FDD-LTE - диапазоны 1/2/3/5/7/8/20<br />
+                        WCDMA - диапазоны 1/2/5/8<br />
+                        GSM: диапазоны 2/3/5/8<br />
+                        GPS/ГЛОНАСС
                     </div>
                 </div>
                 <div class="break-col"></div>
                 <div class="ts-info-col">
-                    <div class="h2 ticon-7">BATTERY</div>
+                    <div class="h2 ticon-7">Батарея</div>
                     <div class="xd-txt">
-                        4500mAh, QuickCharge 3.0<br />
+                        4500mAh<br />
+                        Быстрая зарядка Qualcomm Quick Charge 3.0 (15-вт)
                     </div>
                 </div>
                 <div class="ts-info-col">
-                    <div class="h2 ticon-14">BOX CONTENTS</div>
+                    <div class="h2 ticon-14">Комплектация</div>
                     <div class="xd-txt">
-                        Vsmart Joy 2+<br />
-                        Qualcomm® Quick Charge™ 3.0 adaptor<br />
-                        Set of earphones<br />
-                        USB Type-C cable<br />
-                        Case<br />
-                        Documentation
+                        Смартфон VSmart Joy 2+<br />
+                        Адаптер Quick Charge™ 3.0<br />
+                        Кабель USB Type-C<br />
+                        Гарнитура<br />
+                        Краткое руководство пользователя<br />
+                        Чехол
                     </div>
                 </div>
             </div>
