fixing urls and russian translation

--- a/bee/index.html
+++ b/bee/index.html
@@ -132,11 +132,11 @@
             <li>
                 <ul class="fs-spr-4">
                     <li>
-                        <a href="../joy-3">
+                        <a href="../joy-3-plus">
                             <div class="fs-menu-pic">
-                                <img class="cmPic" src="../images/menu/img-joy3.png" alt="Joy 3">
+                                <img class="cmPic" src="../images/menu/img-joy3.png" alt="Joy 3+">
                             </div>
-                            <span>Joy 3</span>
+                            <span>Joy 3+</span>
                         </a>
                     </li>
                     <li>
@@ -717,7 +717,7 @@
                 <div class="fn-list">
                     <div class="h2">СМАРТФОНЫ</div>
                     <div class="fn-txt">
-                        <a href="../joy-3/" class="fn-link">Joy 3</a>
+                        <a href="../joy-3-plus/" class="fn-link">Joy 3+</a>
                         <a href="../live/" class="fn-link">Live</a>
                         <a href="../joy-2-plus/" class="fn-link">Joy 2+</a>
                         <a href="../star/" class="fn-link">Star</a>
