--- a/joy-3-plus/index.html
+++ b/joy-3-plus/index.html
@@ -12,11 +12,11 @@
     <title id="hdtitle">Vsmart Joy 3+</title>
     <meta name="description"
           content="Vsmart Joy 3 với bộ 3 camara AI luôn sẵn sàng bắt trọn mọi khoảnh khắc. Hơn thế, dung lượng pin 5000mAh cho phép bạn 'chiến game' cả ngày dài. Mua ngay hôm nay!">
-    <meta name="keywords" content="Vsmart Joy 3">
+    <meta name="keywords" content="Vsmart Joy 3+">
     <!--og-->
-    <meta property="og:title" content="Vsmart Joy 3 - Chất như mơ, Joy bất ngờ">
+    <meta property="og:title" content="Vsmart Joy 3+ - Chất như mơ, Joy bất ngờ">
     <meta property="og:description"
-          content="Vsmart Joy 3 với bộ 3 camara AI luôn sẵn sàng bắt trọn mọi khoảnh khắc. Hơn thế, dung lượng pin 5000mAh cho phép bạn 'chiến game' cả ngày dài. Mua ngay hôm nay!">
+          content="Vsmart Joy 3+ với bộ 3 camara AI luôn sẵn sàng bắt trọn mọi khoảnh khắc. Hơn thế, dung lượng pin 5000mAh cho phép bạn 'chiến game' cả ngày dài. Mua ngay hôm nay!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/joy-3/thumbnail.jpg">
 
@@ -110,9 +110,9 @@
             <li>
                 <ul class="fs-spr-4">
                     <li>
-                        <a href="../joy-3">
+                        <a href="../joy-3-plus">
                             <div class="fs-menu-pic">
-                                <img class="cmPic" src="../images/menu/img-joy3.png" alt="Joy 3">
+                                <img class="cmPic" src="../images/menu/img-joy3.png" alt="Joy 3+">
                             </div>
                             <span>Joy 3+</span>
                         </a>
@@ -182,10 +182,10 @@
                         <div class="fs-area-pic">
                             <img class="fs-pc pcPic fs-lazy"
                                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                 data-src="../images/joy-3/landing/joy-banner-ru.jpg" alt="Điện thoại Joy 3">
+                                 data-src="../images/joy-3/landing/joy-banner-ru.jpg" alt="">
                             <img class="fs-sp spPic fs-lazy"
                                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                 data-src="../images/joy-3/landing/joy-banner-sp-ru.jpg" alt="Điện thoại Joy 3">
+                                 data-src="../images/joy-3/landing/joy-banner-sp-ru.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -236,7 +236,7 @@
                         <img class="pcPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../images/joy-3/landing/camera-info-mask.png"
-                             alt="Đắm Chìm Trong Màn Hình Rộng Hơn">
+                             alt="">
                         <div class="fs-info-camera">
                             <span>Сверхширокоугольный объектив <br>8Мп (Апертура f2.2)</span>
                             <span>Светосильный объектив <br>13Мп (Апертура f2.0)</span>
@@ -249,7 +249,7 @@
                         <img class="spPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../images/joy-3/landing/camera-info-mask.png"
-                             alt="Đắm Chìm Trong Màn Hình Rộng Hơn">
+                             alt="">
                         <div class="fs-info-camera">
                             <span>Сверхширокоугольный объектив <br>8Мп (Апертура f2.2)</span>
                             <span>Светосильный объектив <br>13Мп (Апертура f2.0)</span>
@@ -262,7 +262,7 @@
                     <div class="fs-area-pic">
                         <img class="cmPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                             data-src="../images/joy-3/landing/camera-phone.png" alt="Đắm Chìm Trong Màn Hình Rộng Hơn">
+                             data-src="../images/joy-3/landing/camera-phone.png" alt="">
                     </div>
                 </div>
 
@@ -332,32 +332,32 @@
                         <img class="cmPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../images/joy-3/landing/light.png"
-                             alt="Pin khủng, sạc nhanh Cả ngày xài thả phanh!">
+                             alt="">
                     </div>
                     <div class="fs-mah">
                         <img class="cmPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                             data-src="../images/joy-3/landing/mah5000.png"
-                             alt="Pin khủng, sạc nhanh Cả ngày xài thả phanh!">
+                             data-src="../images/joy-3/landing/mah5000-ru.png"
+                             alt="">
                     </div>
 
                     <div class="fs-area-pic">
                         <img class="fs-pc pcPic fs-lazy battery-shadow"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../images/joy-3/landing/phone2-shadow.png"
-                             alt="Pin khủng, sạc nhanh Cả ngày xài thả phanh!">
+                             alt="">
                         <img class="fs-pc pcPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../images/joy-3/landing/phone2.jpg"
-                             alt="Pin khủng, sạc nhanh Cả ngày xài thả phanh!">
+                             alt="">
                         <img class="fs-sp spPic fs-lazy battery-shadow"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../images/joy-3/landing/phone2-shadow-sp.png"
-                             alt="Pin khủng, sạc nhanh Cả ngày xài thả phanh!">
+                             alt="">
                         <img class="fs-sp spPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../images/joy-3/landing/phone2-sp.jpg"
-                             alt="Pin khủng, sạc nhanh Cả ngày xài thả phanh!">
+                             alt="">
                     </div>
 
                 </div>
@@ -449,23 +449,23 @@
                         <img class="fs-pc pcPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../images/joy-3/landing/experience-main.jpg"
-                             alt="Hiệu Suất Mạnh Mẽ Cho Trải Nghiệm Hoàn Hảo">
+                             alt="">
                         <img class="fs-sp spPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../images/joy-3/landing/experience-main-sp.jpg"
-                             alt="Hiệu Suất Mạnh Mẽ Cho Trải Nghiệm Hoàn Hảo">
+                             alt="">
                     </div>
                     <div class="fs-experience-phone">
                         <img class="cmPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../images/joy-3/landing/experience.png"
-                             alt="Hiệu Suất Mạnh Mẽ Cho Trải Nghiệm Hoàn Hảo">
+                             alt="">
                     </div>
                     <div class="fs-experience-zoom">
                         <img class="cmPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../images/joy-3/landing/human-zoom.png"
-                             alt="Hiệu Suất Mạnh Mẽ Cho Trải Nghiệm Hoàn Hảo">
+                             alt="">
                     </div>
                 </div>
 
@@ -506,7 +506,7 @@
                                 <img class="cmPic fs-lazy"
                                      src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                                      data-src="../images/joy-3/landing/security-phone1.png"
-                                     alt="Mở khoá vân tay chỉ một chạm thôi là nhớ nhau cả đời!">
+                                     alt="">
                             </div>
                         </li>
                         <li>
@@ -521,13 +521,11 @@
                             <div class="fs-small-pic">
                                 <img class="cmPic fs-lazy"
                                      src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                     data-src="../images/joy-3/landing/security-phone2.png" alt="Mở khoá bằng nhận diện gương
-                                            mặt nhớ mãi không thôi.">
+                                     data-src="../images/joy-3/landing/security-phone2.png" alt="">
                                 <div class="diamond">
                                     <img class="cmPic fs-lazy"
                                          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                         data-src="../images/joy-3/landing/diamond.png" alt="Mở khoá bằng nhận diện gương
-                                            mặt nhớ mãi không thôi.">
+                                         data-src="../images/joy-3/landing/diamond.png" alt="">
                                 </div>
 
                             </div>
@@ -631,8 +629,7 @@
                     <span class="fs-parameter-title-icon">
                         <img class="cmPic fs-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                             data-src="../images/joy-3/landing/parameter-icon.png" alt="Mở khoá bằng nhận diện gương
-                            mặt nhớ mãi không thôi.">
+                             data-src="../images/joy-3/landing/parameter-icon.png" alt="">
                     </span>Технические характеристики JOY 3+
                 </h2>
             </div>
@@ -645,8 +642,7 @@
                                 <span class="fs-parameter-icon dimension-icon">
                                     <img class="cmPic fs-lazy"
                                          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                         data-src="../images/joy-3/landing/dimension-icon.png" alt="Mở khoá bằng nhận diện gương
-                                mặt nhớ mãi không thôi.">
+                                         data-src="../images/joy-3/landing/dimension-icon.png" alt="">
                                 </span>ГАБАРИТЫ УСТРОЙСТВА
                             </h3>
                             <p>Размеры: 165.1 x 76.4 x 9.2 мм</p>
@@ -657,8 +653,7 @@
                                 <span class="fs-parameter-icon processor-icon">
                                     <img class="cmPic fs-lazy"
                                          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                         data-src="../images/joy-3/landing/processor-icon.png" alt="Mở khoá bằng nhận diện gương
-                                mặt nhớ mãi không thôi.">
+                                         data-src="../images/joy-3/landing/processor-icon.png" alt="">
                                 </span>ПРОЦЕССОР И ПАМЯТЬ
                             </h3>
                             <p>ОС: Android 10.0 (Q) + VOS 3.0</p>
@@ -671,8 +666,7 @@
                                 <span class="fs-parameter-icon camera-icon">
                                     <img class="spPic fs-lazy"
                                          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                         data-src="../images/joy-3/landing/camera-icon.png" alt="Mở khoá bằng nhận diện gương
-                                    mặt nhớ mãi không thôi.">
+                                         data-src="../images/joy-3/landing/camera-icon.png" alt="">
                                 </span>КАМЕРА
                             </h3>
                             <p>Основная камера:</p>
@@ -696,8 +690,7 @@
                                 <span class="fs-parameter-icon camera-icon">
                                     <img class="pcPic fs-lazy"
                                          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                         data-src="../images/joy-3/landing/camera-icon.png" alt="Mở khoá bằng nhận diện gương
-                                mặt nhớ mãi không thôi.">
+                                         data-src="../images/joy-3/landing/camera-icon.png" alt="">
                                 </span>КАМЕРА
                             </h3>
                             <p>Основная камера:</p>
@@ -721,8 +714,7 @@
                                 <span class="fs-parameter-icon screen-icon">
                                     <img class="cmPic fs-lazy"
                                          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                         data-src="../images/joy-3/landing/screen-icon.png" alt="Mở khoá bằng nhận diện gương
-                                mặt nhớ mãi không thôi.">
+                                         data-src="../images/joy-3/landing/screen-icon.png" alt="">
                                 </span>ДИСПЛЕЙ
                             </h3>
                             <p>Диагональ: 6.52"</p>
@@ -736,8 +728,7 @@
                                 <span class="fs-parameter-icon connection-icon">
                                     <img class="cmPic fs-lazy"
                                          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                         data-src="../images/joy-3/landing/connection-icon.png" alt="Mở khoá bằng nhận diện gương
-                                mặt nhớ mãi không thôi.">
+                                         data-src="../images/joy-3/landing/connection-icon.png" alt="">
                                 </span>ИНТЕРФЕЙСЫ
                             </h3>
                             <p>USB Type-C</p>
@@ -756,8 +747,7 @@
                                 <span class="fs-parameter-icon battery-icon">
                                     <img class="spPic fs-lazy"
                                          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                         data-src="../images/joy-3/landing/battery-icon.png" alt="Mở khoá bằng nhận diện gương
-                                    mặt nhớ mãi không thôi.">
+                                         data-src="../images/joy-3/landing/battery-icon.png" alt="">
                                 </span>АККУМУЛЯТОР
                             </h3>
                             <p>5000 mAh</p>
@@ -770,8 +760,7 @@
                                 <span class="fs-parameter-icon content-icon">
                                     <img class="spPic fs-lazy"
                                          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                         data-src="../images/joy-3/landing/content-icon.png" alt="Mở khoá bằng nhận diện gương
-                                    mặt nhớ mãi không thôi.">
+                                         data-src="../images/joy-3/landing/content-icon.png" alt="">
                                 </span>КОМПЛЕКТАЦИЯ
                             </h3>
                             <p>Смартфон VSmart Joy 3+</p>
@@ -789,8 +778,7 @@
                                 <span class="fs-parameter-icon battery-icon">
                                     <img class="pcPic fs-lazy"
                                          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                         data-src="../images/joy-3/landing/battery-icon.png" alt="Mở khoá bằng nhận diện gương
-                                mặt nhớ mãi không thôi.">
+                                         data-src="../images/joy-3/landing/battery-icon.png" alt="">
                                 </span>АККУМУЛЯТОР
                             </h3>
                             <p>5000 mAh</p>
@@ -802,8 +790,7 @@
                                 <span class="fs-parameter-icon content-icon">
                                     <img class="cmPic fs-lazy"
                                          src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                         data-src="../images/joy-3/landing/content-icon.png" alt="Mở khoá bằng nhận diện gương
-                                mặt nhớ mãi không thôi.">
+                                         data-src="../images/joy-3/landing/content-icon.png" alt="">
                                 </span>КОМПЛЕКТАЦИЯ
                             </h3>
                             <p>Смартфон VSmart Joy 3+</p>
@@ -830,7 +817,7 @@
                 <div class="fn-list">
                     <div class="h2">СМАРТФОНЫ</div>
                     <div class="fn-txt">
-                        <a href="../joy-3/" class="fn-link">Joy 3</a>
+                        <a href="../joy-3-plus/" class="fn-link">Joy 3+</a>
                         <a href="../live/" class="fn-link">Live</a>
                         <a href="../joy-2-plus/" class="fn-link">Joy 2+</a>
                         <a href="../star/" class="fn-link">Star</a>
