--- a/joy-2-plus/index.html
+++ b/joy-2-plus/index.html
@@ -108,11 +108,11 @@
             <li>
                 <ul class="fs-spr-4">
                     <li>
-                        <a href="../joy-3">
+                        <a href="../joy-3-plus">
                             <div class="fs-menu-pic">
-                                <img class="cmPic" src="../images/menu/img-joy3.png" alt="Joy 3">
+                                <img class="cmPic" src="../images/menu/img-joy3.png" alt="Joy 3+">
                             </div>
-                            <span>Joy 3</span>
+                            <span>Joy 3+</span>
                         </a>
                     </li>
                     <li>
@@ -212,7 +212,7 @@
         <div class="h2">ЛОВИ МОМЕНТ</div>
         <div class="xd-txt">Двойная камера (13Мп+5Мп) позволяет делать снимки самых ярких моментов , происходящих вокруг вас , которыми можно делиться с кем угодно и когда угодно</div>
         <div class="s3-icons mg-center">
-            <img src="../images/joy-2-plus/s3-icons.png">
+            <img src="../images/joy-2-plus/s3-icons-ru.png">
         </div>
     </div>
     <div class="s3-phone mg-center">
@@ -317,9 +317,9 @@
 
 <section id="colors" class="xd-section sec9">
     <div class="s9-phone mg-center">
-        <img src="../images/joy-2-plus/s9-phone-1.png" class="s9-p1">
-        <img src="../images/joy-2-plus/s9-phone-2.png" class="s9-p2 abs">
-        <img src="../images/joy-2-plus/s9-phone-3.png" class="s9-p3 abs">
+        <img src="../images/joy-2-plus/s9-phone-1-ru.png" class="s9-p1">
+        <img src="../images/joy-2-plus/s9-phone-2-ru.png" class="s9-p2 abs">
+        <img src="../images/joy-2-plus/s9-phone-3-ru.png" class="s9-p3 abs">
     </div>
     <div class="info s9-info mg-center">
         <div class="h2">ИСКРЯЩИЕСЯ ЦВЕТА</div>
@@ -487,7 +487,7 @@
                 <div class="fn-list">
                     <div class="h2">СМАРТФОНЫ</div>
                     <div class="fn-txt">
-                        <a href="../joy-3/" class="fn-link">Joy 3</a>
+                        <a href="../joy-3-plus/" class="fn-link">Joy 3+</a>
                         <a href="../live/" class="fn-link">Live</a>
                         <a href="../joy-2-plus/" class="fn-link">Joy 2+</a>
                         <a href="../star/" class="fn-link">Star</a>
